# restriction-checker

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
configs/: config.yaml
scripts/: check_api.sh  deploy_app.sh  deploy_cr.sh  run_tf.sh
src/: app.py  check_agent.py  evaluate.py
src/agents/: agent_runner.py  base.py  chatbot.py  qa.py  restrictor.py  system_instructions.py
src/api/: app.py  dependencies.py  models.py  routes.py
src/core/: config.py  logger.py  utils.py
src/data_processing/: bq_processor.py  gcs_processor.py  image_processor.py
terraform/: dev.tfvars  main.tf  outputs.tf  prod.tfvars  variables.tf  versions.tf
terraform/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_storage/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/integration_tests/: test_api_integration.py
tests/performance_tests/: conftest.py  test_agent_runner_perf.py  test_config_and_schema_perf.py  test_gcs_processor_perf.py  test_image_processing_perf.py  test_session_perf.py
tests/unit_tests/agents/: test_base.py  test_qa.py  test_restrictor.py
tests/unit_tests/api/: conftest.py  test_dependencies.py  test_routes.py
tests/unit_tests/core/: test_config.py  test_logger.py  test_utils.py
tests/unit_tests/data_processing/: test_gcs_processor.py  test_image_processor.py
